<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#E6E6E6"
    android:orientation="horizontal"
    android:paddingStart="16dp"
    android:paddingTop="8dp"
    android:paddingEnd="16dp"
    android:paddingBottom="8dp">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="3"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/num1"
                android:layout_width="0dp"
                android:layout_height="46dp"
                android:layout_weight="1"
                android:background="@drawable/keyboard_item_background"
                android:gravity="center"
                android:text="@string/num_1"
                android:textColor="@color/keyboard_text_color"
                android:textSize="24sp"
                android:textStyle="bold" />


            <TextView
                android:id="@+id/num2"
                android:layout_width="0dp"
                android:layout_height="46dp"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:layout_weight="1"
                android:background="@drawable/keyboard_item_background"
                android:gravity="center"
                android:text="@string/num_2"
                android:textColor="@color/keyboard_text_color"
                android:textSize="24sp"
                android:textStyle="bold" />


            <TextView
                android:id="@+id/num3"
                android:layout_width="0dp"
                android:layout_height="46dp"
                android:layout_weight="1"
                android:background="@drawable/keyboard_item_background"
                android:gravity="center"
                android:text="@string/num_3"
                android:textColor="@color/keyboard_text_color"
                android:textSize="24sp"
                android:textStyle="bold" />

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"

            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/num4"
                android:layout_width="0dp"
                android:layout_height="46dp"
                android:layout_weight="1"
                android:background="@drawable/keyboard_item_background"
                android:gravity="center"
                android:text="@string/num_4"
                android:textColor="@color/keyboard_text_color"
                android:textSize="24sp"
                android:textStyle="bold" />


            <TextView
                android:id="@+id/num5"
                android:layout_width="0dp"
                android:layout_height="46dp"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:layout_weight="1"
                android:background="@drawable/keyboard_item_background"
                android:gravity="center"
                android:text="@string/num_5"
                android:textColor="@color/keyboard_text_color"
                android:textSize="24sp"
                android:textStyle="bold" />


            <TextView
                android:id="@+id/num6"
                android:layout_width="0dp"
                android:layout_height="46dp"
                android:layout_weight="1"
                android:background="@drawable/keyboard_item_background"
                android:gravity="center"
                android:text="@string/num_6"
                android:textColor="@color/keyboard_text_color"
                android:textSize="24sp"
                android:textStyle="bold" />

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"

            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/num7"
                android:layout_width="0dp"
                android:layout_height="46dp"
                android:layout_weight="1"
                android:background="@drawable/keyboard_item_background"
                android:gravity="center"
                android:text="@string/num_7"
                android:textColor="@color/keyboard_text_color"
                android:textSize="24sp"
                android:textStyle="bold" />


            <TextView
                android:id="@+id/num8"
                android:layout_width="0dp"
                android:layout_height="46dp"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:layout_weight="1"
                android:background="@drawable/keyboard_item_background"
                android:gravity="center"
                android:text="@string/num_8"
                android:textColor="@color/keyboard_text_color"
                android:textSize="24sp"
                android:textStyle="bold" />


            <TextView
                android:id="@+id/num9"
                android:layout_width="0dp"
                android:layout_height="46dp"
                android:layout_weight="1"
                android:background="@drawable/keyboard_item_background"
                android:gravity="center"
                android:text="@string/num_9"
                android:textColor="@color/keyboard_text_color"
                android:textSize="24sp"
                android:textStyle="bold" />

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/num0"
                android:layout_width="0dp"
                android:layout_height="46dp"
                android:layout_marginEnd="0dp"
                android:layout_weight="2.1"
                android:background="@drawable/keyboard_item_background"
                android:gravity="center"
                android:text="@string/num_0"
                android:textColor="@color/keyboard_text_color"
                android:textSize="24sp"
                android:textStyle="bold" />


            <TextView
                android:id="@+id/num_point"
                android:layout_width="0dp"
                android:layout_height="46dp"
                android:layout_marginStart="8dp"
                android:layout_weight="1"
                android:background="@drawable/keyboard_item_background"
                android:gravity="center"
                android:text="@string/num_point"
                android:textColor="@color/keyboard_text_color"
                android:textSize="24sp"
                android:textStyle="bold" />

        </LinearLayout>


    </LinearLayout>


    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical">

        <FrameLayout
            android:id="@+id/delete"
            android:layout_width="match_parent"
            android:layout_height="46dp"
            android:layout_marginStart="8dp"
            android:background="@drawable/keyboard_item_background">

            <ImageView
                android:layout_width="28dp"
                android:layout_height="28dp"
                android:layout_gravity="center"
                android:src="@mipmap/delete_icon" />
        </FrameLayout>


        <TextView
            android:id="@+id/submit"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_weight="1"
            android:background="@drawable/keyboard_item_background2"
            android:gravity="center"
            android:text="@string/submit"
            android:textColor="#fff"
            android:textSize="16sp"
            android:textStyle="bold" />


    </LinearLayout>


</LinearLayout>